// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsTokenSelectionScreen matches snapshot with send asset picker 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-token-selection-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-token-selection-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select token
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto"
    >
      <div
        data-testid="send-asset-picker"
      >
        <span
          data-testid="hide-balances"
        >
          true
        </span>
        <span
          data-testid="disable-metrics"
        >
          true
        </span>
        <span
          data-testid="token-count"
        >
          1
        </span>
        <span
          data-testid="empty-state-message"
        >
          No tokens available
        </span>
        <button
          data-testid="apply-network-filter"
        >
          Apply network filter
        </button>
        <button
          data-testid="mapped-token-eip155:1/slip44:60"
        >
          ETH
        </button>
      </div>
    </div>
    <div
      class="border-t border-border-muted px-4 py-3"
    >
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-show-all-tokens"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Show all tokens
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsTokenSelectionScreen shows error state when tokensError exists 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-token-selection-error"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-token-selection-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select token
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        Error loading tokens
      </p>
    </div>
  </div>
</div>
`;

exports[`RampsTokenSelectionScreen shows loading state when tokensLoading is true 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-token-selection-loading"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-token-selection-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Select token
      </p>
    </div>
    <div
      class="flex flex-col items-center justify-center flex-1"
    >
      <div
        class="spinner h-8 w-8"
      >
        <svg
          class="lds-spinner"
          height="100%"
          preserveAspectRatio="xMidYMid"
          style="background: none;"
          viewBox="0 0 100 100"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="rotate(0 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.9166666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(30 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.8333333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(60 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.75s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(90 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.6666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(120 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5833333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(150 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(180 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.4166666666666667s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(210 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.3333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(240 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.25s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(270 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.16666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(300 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.08333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(330 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="0s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
